# unshorten-fast

./: Pipfile  README.md  pyproject.toml  requirements.txt
unshorten_fast/: __init__.py  api.py  shorten_URL_input.txt  shorten_URL_output.txt
unshorten_fast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
